--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -10,13 +10,15 @@
         <div class="navbar">
     
             {% if user %}
+
                 <a href="{{url_for('home1')}}">Home</a>
+                <a href="{{url_for('createhabits')}}">My Habits</a>
                 <h1>Habit Hero</h1>
                 <a href="{{url_for('habitats')}}">Habitats</a>
-                <a href="{{url_for('logout')}}">Logout</a>
                 <a href="{{url_for('profile')}}">
-                    <img id="profilePicture2" class="forPic" alt="profile picture" src="{{ url_for('static', filename='images/profile_uploads/' + (user.profile_picture or 'profile_default.jpeg')) }}" >
+                    <img class="profilePicture" alt="profile picture" src="{{ url_for('static', filename='images/profile_uploads/' + (user.profile_picture or 'profile_default.jpeg')) }}" >
                 </a>
+
             {% else %}
                 <a href="{{url_for('home')}}">Home</a>
                 <a href="{{url_for('aboutUs')}}">About Us</a>
