--- a/flask_app/templates/aboutUs.html
+++ b/flask_app/templates/aboutUs.html
@@ -18,28 +18,29 @@ About Us
         having fun with a little healthy competition.
     </p>
 
+    <h2>Contact Us</h2>
+    <form id="contactForm" class="form-group" method="post" action="{{ url_for('aboutUs') }}">
+        {{ form.hidden_tag() }}
+
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="subject">Subject:</label>
+        <input type="text" id="subject" name="subject" required>
+
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+
+        <input type="submit" class="submit_button" value="Submit">
+    </form>
+
     {% if submitted %}
-        <p class="thank-you-message">Thank you for reaching out! We will get back to you soon.</p>
-    {% else %}
-        <h2>Contact Us</h2>
-        <form id="contactForm" method="post" action="{{ url_for('aboutUs') }}">
-            {{ form.hidden_tag() }}
-
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="subject">Subject:</label>
-            <input type="text" id="subject" name="subject" required>
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
-
-            <input type="submit" value="Submit">
-        </form>
+        <p id="thank-you-message">Thank you for reaching out! We will get back to you soon.</p>
     {% endif %}
+    
 </div>
 
 {% endblock %}
