--- a/flask_app/templates/habits.html
+++ b/flask_app/templates/habits.html
@@ -134,7 +134,7 @@
                 </div>
 
                 <button type="submit" class="btn" onclick="removeHabit('{{ habit.id }}')"><img id="delete_habit" src="static/images/remove.png" ></button>
-                <button type="submit" class="btn" onclick="editHabit('{{ habit.id }}')"> Edit </button>
+                <button type="submit" class="btn" onclick="editHabit('{{ habit.id }}', '{{ habit.title }}', '{{ habit.description }}')"> Edit </button>
               
             </div>
         </li>
