--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -25,7 +25,7 @@ Habit Hero Login
 
         <div class="container">
             <h2 class="title">Login</h2>
-            <form method="POST" action="/login">
+            <form method="POST" action="#">
                 <div class="form-group">
                     {{ form.email.label }}
                     {{ form.email }}
