--- a/flask_app/templates/register.html
+++ b/flask_app/templates/register.html
@@ -11,7 +11,7 @@ Habit Hero Register
 
         <div class="container">
             <h2 class="title">Register</h2>
-            <form method="POST" action="/register">
+            <form method="POST" action="#">
                 <div class="form-group">
                     {{ form.firstname.label }}
                     {{ form.firstname }}
